# IntelNav

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/actions/: intelnav-cli-pack.sh
.github/workflows/: ci.yml  intelnav-release.yml
bench-lan/: baseline-pc.txt  chain-fp16-split12.json  chain-fp16-split18.json  chain-fp16-split20.json  chain-fp16-split22.json  chain-int8-split12.json
crates/app/: Cargo.toml
crates/app/src/: bootstrap.rs  chain_driver.rs  contribute.rs  control.rs  download.rs  firstrun.rs  forward_server.rs  gate.rs  gpu_compat.rs  lib.rs  probe_latency.rs  shimmer.rs  slash.rs  swarm_node.rs  theme.rs
crates/app/src/service/: mod.rs  systemd.rs
crates/app/src/tui/: mod.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: banner.rs  browser.rs  catalog.rs  chain_driver.rs  chat.rs  cmd.rs  download.rs  local.rs  main.rs  shimmer.rs  slash.rs  theme.rs  tui.rs
crates/cli/src/tui/: mod.rs  wrap.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: config.rs  error.rs  ids.rs  lib.rs  tier.rs  types.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: lib.rs
crates/gateway/: Cargo.toml  README.md
crates/gateway/src/: api.rs  driver.rs  lib.rs  server.rs  state.rs
crates/gateway/static/: index.html
crates/gateway/tests/: demo_routes.rs
crates/ggml/: Cargo.toml  build.rs
crates/ggml/src/: hidden.rs  lib.rs  loader.rs  probe.rs  sys.rs
crates/ggml/tests/: bit_identical.rs  smoke.rs  stitched_load.rs
crates/model-store/: Cargo.toml
crates/model-store/src/: bundle.rs  chunker.rs  cid.rs  gguf.rs  http.rs  lib.rs  manifest.rs  p2p.rs  serve.rs  stitch.rs
crates/model-store/tests/: ci_roundtrip.rs  http_roundtrip.rs  p2p_roundtrip.rs
crates/model-store/tests/common/: mod.rs
crates/net/: Cargo.toml  README.md
crates/net/src/: directory.rs  lib.rs  mdns.rs  registry_dir.rs  swarm.rs
crates/netsim/: Cargo.toml
crates/netsim/src/: lib.rs
crates/netsim/tests/: shaper.rs
crates/node/: Cargo.toml
crates/node/src/: main.rs
crates/registry/: Cargo.toml  README.md
crates/registry/src/: api.rs  envelope.rs  gguf.rs  lib.rs  main.rs  manifest.rs  server.rs  state.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/examples/: bench_chain.rs  bench_ggml.rs  generate.rs  pipe_driver.rs  pipe_peer.rs  probe.rs  smoke_load.rs
crates/runtime/src/: chain.rs  device.rs  generate.rs  ggml_backend.rs  lib.rs  model.rs  pipeline.rs  probe.rs  sample.rs  spec.rs  telemetry.rs  tokenizer.rs
crates/runtime/tests/: bounds.rs  ggml_pipelined.rs
crates/wire/: Cargo.toml  README.md
crates/wire/src/: lib.rs
docs/: ARCHITECTURE.md  OVERVIEW.md  QUICKSTART.md  STATUS.md  WHAT_WE_HAVE.md  architecture.md  onboarding-host.md  onboarding-user.md
docs/dev/: RUNTIME_DECISION.md
python/intelnav_shard/: README.md  pyproject.toml  smoke_client.py  smoke_registry.py
python/intelnav_shard/intelnav_shard/: __init__.py  __main__.py  backend.py  crypto.py  llama_cpp_runtime.py  model_resolver.py  registry_client.py  server.py  shard.py  wire.py
scripts/: demo.sh  install.sh  provision.sh
specs/: protocol-v1.md  security-v1.md  shard-registry-v1.md
