[package]
name        = "intelnav-app"
description = "Substantive layer for IntelNav: TUI, drivers, contribute paths, swarm-node spawn."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[lib]
path = "src/lib.rs"

[dependencies]
intelnav-core    = { workspace = true }
intelnav-crypto  = { workspace = true }
intelnav-net     = { workspace = true }
intelnav-runtime = { workspace = true }
intelnav-model-store = { workspace = true }
intelnav-ggml    = { path = "../ggml" }
intelnav-wire    = { workspace = true }

tokio         = { workspace = true }
futures       = { workspace = true }
futures-util  = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

ratatui       = { workspace = true }
crossterm     = { workspace = true }
reqwest       = { workspace = true }
bytes         = { workspace = true }
directories   = { workspace = true }
toml          = { workspace = true }
hex           = { workspace = true }
blake3        = { workspace = true }
bs58          = { workspace = true }
async-stream  = { workspace = true }
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
