[package]
name        = "intelnav-cli"
description = "`intelnav` — user-facing CLI for the IntelNav network."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[[bin]]
name = "intelnav"
path = "src/main.rs"

[dependencies]
intelnav-core = { workspace = true }
intelnav-app  = { workspace = true }

tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
# CUDA / Metal selection happens at libllama-load time. Empty no-op
# features so existing CI invocations like
# `cargo build -p intelnav-cli --features cuda` don't break.
cuda    = []
metal   = []
