[package]
name        = "intelnav-core"
description = "Common types, errors, and config for IntelNav."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
hex          = { workspace = true }
bytes        = { workspace = true }
tracing      = { workspace = true }
directories  = { workspace = true }
toml         = { workspace = true }
blake3       = { workspace = true }
anyhow       = { workspace = true }
