[package]
name        = "intelnav-crypto"
description = "Ed25519 identity, X25519 handshake, AES-256-GCM prompt encryption."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[dependencies]
intelnav-core = { workspace = true }

ed25519-dalek = { workspace = true }
x25519-dalek  = { workspace = true }
aes-gcm       = { workspace = true }
rand          = { workspace = true }
rand_core     = { workspace = true }
blake3        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
hex           = { workspace = true }
serde         = { workspace = true }
