[package]
name        = "intelnav-net"
description = "Peer discovery and network substrate: mDNS, libp2p Kademlia DHT shard index."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[dependencies]
intelnav-core   = { workspace = true }
intelnav-wire   = { workspace = true }
intelnav-crypto = { workspace = true }

tokio         = { workspace = true }
async-trait   = { workspace = true }
futures       = { workspace = true }
futures-util  = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

mdns-sd       = { workspace = true }
if-addrs      = { workspace = true }
hex           = { workspace = true }
reqwest       = { workspace = true }

# libp2p substrate. TCP + DNS + Noise XX + yamux for transport;
# identify + ping for observability; kad for the shard provider index.
# `dns` lets us dial `/dns4/seed1.intelnav.net/tcp/4001/p2p/...`
# multiaddrs without resolving them ahead of time.
libp2p        = { version = "0.56", features = ["tokio", "tcp", "dns", "noise", "yamux", "identify", "ping", "kad", "macros", "ed25519"] }
ciborium      = { workspace = true }
blake3        = { workspace = true }
anyhow        = { workspace = true }
