[package]
name        = "intelnav-registry"
description = "Shard registry service (specs/shard-registry-v1.md)."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[[bin]]
name = "intelnav-registry"
path = "src/main.rs"

[dependencies]
intelnav-core   = { workspace = true }
intelnav-crypto = { workspace = true }
intelnav-wire   = { workspace = true }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
ciborium    = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
hex         = { workspace = true }
sha2        = { workspace = true }

axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }

clap        = { workspace = true }
