[project]
name            = "intelnav-shard"
version         = "0.1.0"
description     = "IntelNav contributor shard server (paper §12.1) — llama.cpp host speaking the CBOR wire protocol."
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "Apache-2.0" }

dependencies = [
    "cbor2>=5.6",
    "cryptography>=43",
    "blake3>=1.0",
    "typing_extensions>=4.9",
    "httpx>=0.27",
]

[project.scripts]
intelnav-shard = "intelnav_shard.__main__:main"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["intelnav_shard*"]
